<resources>
    <string name="app_name">MyApplication</string>
    <string name="button_to_cycle">1. to life cycle events</string>
    <string name="button_to_click">2. to click events</string>
    <string name="button_to_android_extensions">3. to kotlin android extensions</string>
    <string name="button_to_picasso">4. to picasso</string>
    <string name="button_to_list_view">5. to list view</string>
    <string name="button_to_intents">6. to intents</string>
    <string name="button_to_permissions">7. to permissions</string>
    <string name="button_to_shared_preferences">8. to shered preferences</string>
    <string name="button_to_extension_functions">9. to extension functions </string>

    <string name="button_click_xml">Click xml </string>
    <string name="button_click_line">Click In Line </string>
    <string name="button_multi_1">Multiple Buttons 1 </string>
    <string name="button_multi_2">Multiple Buttons 2 </string>
    <string name="button_multi_3">Multiple Buttons 2</string>

    <string name="button_kat_id">Button by findviewbyid</string>
    <string name="button_kat_kat">button by kat</string>

    <string name="button_intent_extras">Intent with extras</string>
    <string name="button_intent_flags">Intent with flags</string>
    <string name="button_intent_object">Intent with object</string>

    <string name="button_back">Go Back!t</string>

    <string name="button_take_picture">take picture</string>

    <string name="preferences_name_hint">type name here</string>
    <string name="preferences_age_hint">type age here</string>
    <string name="preferences_button_save">save</string>

    <string name="button_toast">toast</string>
    <string name="button_snack_bar">snack bar</string>
    <string name="button_got_to_activity">go to activity</string>
    <string name="button_load_by_url">load by url</string>
</resources>